src/snapshots/cornercase__ui__tests__stacked__renders_projects_on_top.snap
---
source: src/ui.rs
expression: "render_sized(&with_lists(Sidebar::ProjectsOnTop), W, TALL.height).backend()"
---
" ▄▀▀▀ cornercase               │  no tab open                                                       "
" █                             │                                                                    "
"                               │                                                                    "
"  ⌕ search projects, workspace │                                                                    "
"                               │                                                                    "
" projects                      │                                                                    "
"                               │                                                                    "
"▌ tmp (1)                      │                                                                    "
"  cornercase (1)               │                                                                    "
"                               │                                                                    "
"  ▾ ● work                     │                                                                    "
"    api (1)                    │                                                                    "
"                               │                                                                    "
"  + new project                │                                                                    "
" ───────────────────────────── │                                                                    "
" workspaces                    │                                                                    "
"                               │                                                                    "
"  login                        │                                                                    "
"  ▌ claude                     │                                                                    "
"    nvim                       │                                                                    "
"    + tab                      │                                                                    "
"                               │                                                                    "
"  main                         │                                                                    "
"  ↓ 1 more                     │                                                                    "
"  + new workspace              │                                                                    "
" ───────────────────────────── │                                                                    "
"  issues                       │                                                                    "
"  settings                     │                                                                    "
"  usage                        │                                                                    "
"  quit                         │                                                                    "
