src/snapshots/cornercase__ui__tests__stacked__renders_workspaces_on_top.snap
---
source: src/ui.rs
expression: "render_sized(&with_lists(Sidebar::WorkspacesOnTop), W, TALL.height).backend()"
---
" ▄▀▀▀ cornercase               │  no tab open                                                       "
" █                             │                                                                    "
"                               │                                                                    "
"  ⌕ search projects, workspace │                                                                    "
"                               │                                                                    "
" workspaces                    │                                                                    "
"                               │                                                                    "
"  login                        │                                                                    "
"  ▌ claude                     │                                                                    "
"    nvim                       │                                                                    "
"    + tab                      │                                                                    "
"                               │                                                                    "
"  ↓ 2 more                     │                                                                    "
"  + new workspace              │                                                                    "
" ───────────────────────────── │                                                                    "
" projects                      │                                                                    "
"                               │                                                                    "
"▌ tmp (1)                      │                                                                    "
"  cornercase (1)               │                                                                    "
"                               │                                                                    "
"  ▾ ● work                     │                                                                    "
"    api (1)                    │                                                                    "
"                               │                                                                    "
"  + new project                │                                                                    "
"                               │                                                                    "
" ───────────────────────────── │                                                                    "
"  issues                       │                                                                    "
"  settings                     │                                                                    "
"  usage                        │                                                                    "
"  quit                         │                                                                    "
